--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Chute Inicial Corinthians - Home</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="midia/img/favicon/logo-do-corinthians-256.png" type="image/x-icon">
+  <link rel="stylesheet" href="frontend/css/style.css">
+  <link rel="shortcut icon" href="frontend/midia/img/favicon/logo-do-corinthians-256.png" type="image/x-icon">
   <style>
     main {
       font-size: 20px;
@@ -18,19 +18,19 @@
 <body>
   <header>
     <div class="logo-titulo">
-      <img src="midia/img/favicon/logo-do-corinthians-256.png" alt="corinthians logo" class="favi" height="100px" width="100px">
+      <img src="frontend/midia/img/favicon/logo-do-corinthians-256.png" alt="corinthians logo" class="favi" height="100px" width="100px">
       <h1>Chute Inicial Corinthians</h1>
     </div>
     <nav>
       <ul>
-        <li><a href="interlagos.html">Interlagos</a></li>
-        <li><a href="osasco.html">Osasco</a></li>
-        <li><a href="itaquera.html">Itaquera</a></li>
-        <li><a href="taboao.html">Taboão</a></li>
-        <li><a href="vargem-grande.html">Vargem Grande</a></li>
-        <li><a href="matricula.html">Matrícula</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="frontend/interlagos.html">Interlagos</a></li>
+        <li><a href="frontend/osasco.html">Osasco</a></li>
+        <li><a href="frontend/itaquera.html">Itaquera</a></li>
+        <li><a href="frontend/taboao.html">Taboão</a></li>
+        <li><a href="frontend/vargem-grande.html">Vargem Grande</a></li>
+        <li><a href="frontend/matricula.html">Matrícula</a></li>
+        <li><a href="frontend/cadastro.html">Cadastro</a></li>
+        <li><a href="frontend/login.html">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -47,23 +47,23 @@
     <div class="carousel">
       <div class="slides">
         <div class="slide">
-        <img src="midia/img/Interlagos/Itaquera.jpg" alt="Unidade Interlagos">
+        <img src="frontend/midia/img/Interlagos/Itaquera.jpg" alt="Unidade Interlagos">
         <div class="overlay">Interlagos</div>
       </div>
       <div class="slide">
-        <img src="midia/img/Osasco/Osasco.jpg" alt="Unidade Osasco">
+        <img src="frontend/midia/img/Osasco/Osasco.jpg" alt="Unidade Osasco">
         <div class="overlay">Osasco</div>
       </div>
       <div class="slide">
-        <img src="midia/img/Itaquera/Itaquera.jpg" alt="Unidade Itaquera">
+        <img src="frontend/midia/img/Itaquera/Itaquera.jpg" alt="Unidade Itaquera">
         <div class="overlay">Itaquera</div>
       </div>
       <div class="slide">
-        <img src="midia/img/Taboão/Taboão.jpg" alt="Unidade Taboão">
+        <img src="frontend/midia/img/Taboão/Taboão.jpg" alt="Unidade Taboão">
         <div class="overlay">Taboão</div>
       </div>
       <div class="slide">
-        <img src="midia/img/Vargem Grande/Vg.jpg" alt="Unidade Vargem Grande">
+        <img src="frontend/midia/img/Vargem Grande/Vg.jpg" alt="Unidade Vargem Grande">
         <div class="overlay">Vargem Grande</div>
       </div>
     </div>
@@ -91,7 +91,7 @@
 
     <p>Mais que formar jogadores, queremos formar campeões para a vida. Venha treinar, aprender, se divertir e escrever junto conosco o futuro do Timão.</p>
 
-    <h3>👉 <a href="cadastro.html" class="links">Inscreva-se</a> já e faça parte do Corinthians Chute Inicial!</h3>
+    <h3>👉 <a href="frontend/cadastro.html" class="links">Inscreva-se</a> já e faça parte do Corinthians Chute Inicial!</h3>
   </main>
 
   <footer>
