Arrumando uns headers e footers

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chute Inicial Corinthians - Admin</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="midia/img/favicon/logo-do-corinthians-256.png">
+  <link rel="shortcut icon" href="midia/img/favicon/logo-do-corinthians-256.png" type="image/x-icon">
 </head>
 <body>
   <header>
