--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -32,29 +32,35 @@
     </form>
   </main>
 
-  <footer>
-        <div>
-      <p>Contato:                
-        <a href="#" onclick="copiarTexto('11968340210')" class="links">Whatsapp</a> | 
-        <a href="#" onclick="copiarTexto('guxxxxtavo.silva@gmail.com')" class="links">Email</a> | 
-        <a href="https://www.instagram.com/gusilvx.sccp" target="_blank" class="links">Instagram</a>
-        </p>
-    </div>
+<footer>
+  <div>
+    <p>Contato: <a href="#" onclick="copiarTexto('11968340210')" class="links">Whatsapp</a> | <a href="#" onclick="copiarTexto('guxxxxtavo.silva@gmail.com')" class="links">Email</a> | <a href="https://www.instagram.com/gusilvx.sccp" target="_blank" class="links">Instagram</a></p>
 
-    <p>Desenvolvido por <label for="text"   class="links">Gustavo Silva</label></p>
+  </div>
+  <p>Desenvolvido por <label for="text" class="links">Gustavo Silva</label></p>
+  <p>© 2025 Chute Inicial Corinthians</p>
+</footer>
 
-    <p>© 2025 Chute Inicial Corinthians</p>
-  </footer>
+<script>
+  const slides = document.querySelector('.slides');
+  const totalSlides = document.querySelectorAll('.slide').length;
+  let index = 0;
 
-  <script src="js/main.js"></script>
-  <script>
-    function copiarTexto(texto) {
-    navigator.clipboard.writeText(texto).then(() => {
-      alert("Copiado: " + texto);
-    }).catch(err => {
-      console.error("Erro ao copiar: ", err);
-    });
+  function showNextSlide() {
+  index++;
+  if (index >= totalSlides) index = 0;
+  slides.style.transform = `translateX(${-index * 100}%)`;
   }
-  </script>
+
+  setInterval(showNextSlide, 3000);
+  
+  function copiarTexto(texto) {
+  navigator.clipboard.writeText(texto).then(() => {
+    alert("Copiado: " + texto);
+  }).catch(err => {
+    console.error("Erro ao copiar: ", err);
+  });
+}
+</script>
 </body>
 </html>
